# wallpipe

./: .gitignore  AGENTS.md  README.md  common.py  curate.py  download.py  filter.py  pyproject.toml  requirements-dev.txt  wallpaper_common.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  sync-labels.yml
docs/agent/: workflow.md
tests/: conftest.py  test_curate.py  test_curate_hash.py  test_curate_saturation.py  test_download.py  test_filter.py  test_filter_prompts.py  test_wallpaper_common.py
